deployment/kustomize/overlays/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: nmelekhov.dacdevops.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sampleapp-service
                port:
                  name: http
  tls:
    - hosts:
      - nmelekhov.dacdevops.ru
      secretName: nmelekhov-cert
